--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/app.js -->
+
     <script src="admin_components/adf-user-management/dreamfactory-user-management.js"></script>
     <script src="admin_components/adf-utility/dreamfactory-utility.js"></script>
     <script src="admin_components/adf-system-config/dreamfactory-system-config.js"></script>
@@ -120,6 +121,10 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/polyfill.js"></script>
+
+    <script src="interceptors/interceptor.config.js"></script>
+    <script src="interceptors/httpValidSession.interceptor.js"></script>
+    <script src="interceptors/globalHeaders.interceptor.js"></script>
     <!-- endbuild -->
 
     <!-- other deps -->
