Start adding new theme

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         <df-top-level-nav-std data-options="topLevelNavOptions"></df-top-level-nav-std>
 
 
-        <div data-ng-if="showAdminComponentNav" style="margin: 10px auto;">
+        <div data-ng-if="showAdminComponentNav" style="margin: 10px auto;" class="df-menu">
             <!-- Component nav and title -->
             <div class="container-fluid">
                 <div class="row">
