--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
             <!-- Component nav and title -->
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 df-menu-container">
                         <df-component-title></df-component-title>
                         <df-component-nav data-options="componentNavOptions"></df-component-nav>
                     </div>
