Finalize quickstart tab Pull second nav bar to the left

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,10 @@
             <!-- Component nav and title -->
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-12 df-menu-container">
+                    <div class="col-md-2 df-menu-container">
                         <df-component-title></df-component-title>
+                    </div>
+                    <div class="col-md-10 df-menu-container second-nav-menu-items">
                         <df-component-nav data-options="componentNavOptions"></df-component-nav>
                     </div>
                 </div>
